--- a/index.html
+++ b/index.html
@@ -319,51 +319,53 @@
                         para a sua obra, fazemos seu projeto, orçamento gratuito pelo WhatsApp e E-mail
                     </p>
 
-                    <div class="input_form">
-                        <label for="name"></label>
-                        <input type="text" id="name" onkeypress="return textInput();" placeholder="Nome completo:"
-                            maxlength="30" required>
+                    <form action="https://formsubmit.co/matheusvecordeiro@gmail.com" method="POST">
+                        <div class="input_form">
+                            <label for="name"></label>
+                            <input type="text" id="name" onkeypress="return textInput();" placeholder="Nome completo:"
+                                maxlength="30" required>
 
-                        <label for="email"></label>
-                        <input type="email" id="email" placeholder="Email:" maxlength="30" required>
-                    </div>
-                    <div class="input_form">
-                        <label for="phone"></label>
-                        <input type="number" id="phone" placeholder="Telefone:" maxlength="11" required>
+                            <label for="email"></label>
+                            <input type="email" id="email" placeholder="Email:" maxlength="30" required>
+                        </div>
+                        <div class="input_form">
+                            <label for="phone"></label>
+                            <input type="number" id="phone" placeholder="Telefone:" maxlength="11" required>
 
-                        <label for="cep"></label>
-                        <input type="text" id="cep" onkeypress="return numberInput();" placeholder="CEP:" maxlength="30"
-                            required>
-                    </div>
-                    <div class="input_form">
-                        <label for="state"></label>
-                        <input type="text" id="state" onkeypress="return textInput();" placeholder=" Estado:"
-                            maxlength="30" required>
-
-
-                        <label for="number"></label>
-                        <input type="number" id="number" onkeypress="return numberInput();" placeholder="Número:"
-                            maxlength="30" required>
-                    </div>
-                    <div class="input_form">
-                        <label for="district"></label>
-                        <input type="text" id="district" onkeypress="return textInput();" placeholder=" Bairro:"
-                            maxlength="30" required>
-
-                        <label for="city"></label>
-                        <input type="text" id="city" onkeypress="return textInput();" placeholder=" Cidade:"
-                            maxlength="30" required>
-                    </div>
-
-                    <label for="address"></label>
-                    <input type="text" id="address" onkeypress="return textInput();" placeholder="Endereço:"
-                        maxlength="80" required>
+                            <label for="cep"></label>
+                            <input type="text" id="cep" onkeypress="return numberInput();" placeholder="CEP:"
+                                maxlength="30" required>
+                        </div>
+                        <div class="input_form">
+                            <label for="state"></label>
+                            <input type="text" id="state" onkeypress="return textInput();" placeholder=" Estado:"
+                                maxlength="30" required>
 
 
-                    <label for=""></label>
-                    <textarea placeholder="Envie uma mensagem" maxlength="120"></textarea>
+                            <label for="number"></label>
+                            <input type="number" id="number" onkeypress="return numberInput();" placeholder="Número:"
+                                maxlength="30" required>
+                        </div>
+                        <div class="input_form">
+                            <label for="district"></label>
+                            <input type="text" id="district" onkeypress="return textInput();" placeholder=" Bairro:"
+                                maxlength="30" required>
 
-                    <button class="btn_form">Enviar</button>
+                            <label for="city"></label>
+                            <input type="text" id="city" onkeypress="return textInput();" placeholder=" Cidade:"
+                                maxlength="30" required>
+                        </div>
+
+                        <label for="address"></label>
+                        <input type="text" id="address" onkeypress="return textInput();" placeholder="Endereço:"
+                            maxlength="80" required>
+
+
+                        <label for=""></label>
+                        <textarea placeholder="Envie uma mensagem" maxlength="120"></textarea>
+
+                        <button class="btn_form">Enviar</button>
+                    </form>
 
                 </div>
                 <div class="container_right">
