--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                         para a sua obra, fazemos seu projeto, orçamento gratuito pelo WhatsApp e E-mail
                     </p>
 
-                    <form action="https://formsubmit.co/matheusvecordeiro@gmail.com" method="POST">
+                    <form action="https://formsubmit.co/softfloorbr@outlook.com" method="POST">
                         <div class="input_form">
                             <label for="name"></label>
                             <input type="text" id="name" onkeypress="return textInput();" placeholder="Nome completo:"
